ingress/clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: d1l1th1um
  name: d1l1th1um-clusterip 
spec:
  selector:
    app: d1l1th1um 
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
