ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: d1l1th1um-ingress 
  namespace: d1l1th1um
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "d1l1th1um.test"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: d1l1th1um-clusterip 
            port:
              number: 80
